fixed z-index for sidebar button

--- a/the_gathering/static/css/style.css
+++ b/the_gathering/static/css/style.css
@@ -139,6 +139,10 @@ span {
     box-shadow: 1px 2px 3px rgba(0, 0, 0, 0.2);
 }
 
+#sidebarCollapse {
+    z-index: 1000;
+}
+
 #sidebarCollapse i {
     padding: 8px;
 }
